--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2024 Portofolio Saya</p>
+    <p>&copy; 2024 Portofolio Erdianto Sitorus</p>
   </footer>
   
   <script src="scripts.js"></script>
