--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3>Proyek 1</h3>
       <div class="project-info">
         <div class="media">
-          <img src="project1.jpg" alt="Proyek 1">
+          <img src="Photodiode.jpg" alt="Proyek Photodiode">
           <video src="video/pothodiode.mp4" controls></video>
         </div>
         <div class="description">
