--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
 
   <section id="contact">
     <h2>Kontak</h2>
-    <p>Informasi kontak Anda di sini.</p>
+    <p>Nomor: 081273940601</p>
+    <p>Instagram: <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
   </section>
 
   <footer>
