--- a/index.html
+++ b/index.html
@@ -173,7 +173,11 @@
 
   <section id="about">
     <h2>Tentang Saya</h2>
-    <p>Deskripsi tentang Anda dan keahlian Anda.</p>
+    <p>Final year Electrical Engineering student with a strong understanding of alternating current
+ (AC) and Direct Current (DC).I am proficient in operating PLCs and skilled in Internet of Things
+ (IoT) applications as well as the use of microcontrollers such as Arduino and Jetson Nano. I also
+ have a strong understanding of sensors and their applications. Furthermore, I have a keen
+ interest in the field of IT, specializing in Database management and Web development.</p>
   </section>
 
   <section id="contact">
