--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 
   <section id="about">
     <h2>Tentang Saya</h2>
-    <p>Final year Electrical Engineering student with a strong understanding of alternating current
- (AC) and Direct Current (DC).I am proficient in operating PLCs and skilled in Internet of Things
- (IoT) applications as well as the use of microcontrollers such as Arduino and Jetson Nano. I also
- have a strong understanding of sensors and their applications. Furthermore, I have a keen
- interest in the field of IT, specializing in Database management and Web development.</p>
+    <p>Mahasiswa Teknik Elektro tahun terakhir dengan pemahaman yang kuat tentang arus bolak-balik
+ (AC) dan Arus Searah (DC). Saya mahir dalam mengoperasikan PLC dan terampil dalam Internet of Things
+ (IoT) serta penggunaan mikrokontroler seperti Arduino dan Jetson Nano. saya juga
+ memiliki pemahaman yang kuat tentang sensor dan aplikasinya. Selain itu, saya tertarik
+ minat di bidang IT, dengan spesialisasi manajemen Database dan pengembangan Web..</p>
   </section>
 
   <section id="contact">
