--- a/index.html
+++ b/index.html
@@ -65,126 +65,22 @@
     </div>
 
     <!-- Proyek 3 -->
-    <div class="project">
-      <h3>Proyek 3</h3>
-      <div class="project-info">
-        <div class="media">
-          <img src="project3.jpg" alt="Proyek 3">
-          <video src="video/video3.mp4" controls></video>
-        </div>
-        <div class="description">
-          <h4>Deskripsi Proyek:</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod magna ac nulla sodales, sit amet dapibus dui fermentum.</p>
-          <h4>Masalah yang Diselesaikan:</h4>
-          <ul>
-            <li>Masalah 1</li>
-            <li>Masalah 2</li>
-            <li>dll.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Proyek 4 -->
-    <div class="project">
-      <h3>Proyek 4</h3>
-      <div class="project-info">
-        <div class="media">
-          <img src="project4.jpg" alt="Proyek 4">
-          <video src="video/video4.mp4" controls></video>
-        </div>
-        <div class="description">
-          <h4>Deskripsi Proyek:</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod magna ac nulla sodales, sit amet dapibus dui fermentum.</p>
-          <h4>Masalah yang Diselesaikan:</h4>
-          <ul>
-            <li>Masalah 1</li>
-            <li>Masalah 2</li>
-            <li>dll.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Proyek 5 -->
-    <div class="project">
-      <h3>Proyek 5</h3>
-      <div class="project-info">
-        <div class="media">
-          <img src="project5.jpg" alt="Proyek 5">
-          <video src="video/video5.mp4" controls></video>
-        </div>
-        <div class="description">
-          <h4>Deskripsi Proyek:</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod magna ac nulla sodales, sit amet dapibus dui fermentum.</p>
-          <h4>Masalah yang Diselesaikan:</h4>
-          <ul>
-            <li>Masalah 1</li>
-            <li>Masalah 2</li>
-            <li>dll.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Proyek 6 -->
-    <div class="project">
-      <h3>Proyek 6</h3>
-      <div class="project-info">
-        <div class="media">
-          <img src="project6.jpg" alt="Proyek 6">
-          <video src="video/video6.mp4" controls></video>
-        </div>
-        <div class="description">
-          <h4>Deskripsi Proyek:</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod magna ac nulla sodales, sit amet dapibus dui fermentum.</p>
-          <h4>Masalah yang Diselesaikan:</h4>
-          <ul>
-            <li>Masalah 1</li>
-            <li>Masalah 2</li>
-            <li>dll.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Proyek 7 -->
-    <div class="project">
-      <h3>Proyek 7</h3>
-      <div class="project-info">
-        <div class="media">
-          <img src="project7.jpg" alt="Proyek 7">
-          <video src="video/video7.mp4" controls></video>
-        </div>
-        <div class="description">
-          <h4>Deskripsi Proyek:</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod magna ac nulla sodales, sit amet dapibus dui fermentum.</p>
-          <h4>Masalah yang Diselesaikan:</h4>
-          <ul>
-            <li>Masalah 1</li>
-            <li>Masalah 2</li>
-            <li>dll.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <!-- Proyek-proyek lainnya dihapus untuk kesederhanaan -->
 
   </section>
 
   <section id="about">
     <h2>Tentang Saya</h2>
-    <p>Mahasiswa Teknik Elektro tahun terakhir dengan pemahaman yang kuat tentang arus bolak-balik
- (AC) dan Arus Searah (DC). Saya mahir dalam mengoperasikan PLC dan terampil dalam Internet of Things
- (IoT) serta penggunaan mikrokontroler seperti Arduino dan Jetson Nano. saya juga
- memiliki pemahaman yang kuat tentang sensor dan aplikasinya. Selain itu, saya tertarik
- minat di bidang IT, dengan spesialisasi manajemen Database dan pengembangan Web..</p>
+    <p>Deskripsi tentang Anda dan keahlian Anda.</p>
   </section>
 
   <section id="contact">
     <h2>Kontak</h2>
-    <p>Nomor      : 081273940601</p>
-    <p>LinkedIn   : <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
-    <p>Instagram  : <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
+    <p>Nomor: 081273940601</p>
+    <p>Instagram: <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
+    <!-- Tambahkan tautan LinkedIn -->
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
+  </section>
 
   <footer>
     <p>&copy; 2024 Portofolio Erdianto Sitorus</p>
