--- a/index.html
+++ b/index.html
@@ -173,7 +173,11 @@
 
   <section id="about">
     <h2>Tentang Saya</h2>
-    <p>Deskripsi tentang Anda dan keahlian Anda.</p>
+    <p>Mahasiswa Teknik Elektro tahun terakhir dengan pemahaman yang kuat tentang arus bolak-balik
+ (AC) dan Arus Searah (DC). Saya mahir dalam mengoperasikan PLC dan terampil dalam Internet of Things
+ (IoT) serta penggunaan mikrokontroler seperti Arduino dan Jetson Nano. saya juga
+ memiliki pemahaman yang kuat tentang sensor dan aplikasinya. Selain itu, saya tertarik
+ minat di bidang IT, dengan spesialisasi manajemen Database dan pengembangan Web.</p>
   </section>
 
   <section id="contact">
