--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section id="projects">
     <h2>Proyek</h2>
 
-    <!-- Proyek 1 -->
+    <!-- Riset Kendaraan Otonom -->
     <div class="project">
       <h3>Proyek 1</h3>
       <div class="project-info">
