--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Riset Kendaraan Otonom -->
     <div class="project">
-      <h3>Proyek 1</h3>
+      <h3>Kendaraan Otonom</h3>
       <div class="project-info">
         <div class="media">
           <Photo src="Photo/Photodiode.jpg" controls<>/Photo>
