--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3>Kendaraan Otonom</h3>
       <div class="project-info">
         <div class="media">
-          <Photo src="Photo/Photodiode.jpg" controls<>/Photo>
+          <img src="Photo/Photodiode.jpg" controls<>/img>
           <video src="video/pothodiode.mp4" controls></video>
         </div>
         <div class="description">
