--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
   <section id="contact">
     <h2>Kontak</h2>
     <p>Nomor: 081273940601</p>
+    <p>Instagram: <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
     <p>Instagram: <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
   </section>
