--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h3>Proyek 2</h3>
       <div class="project-info">
         <div class="media">
-          <img src="Photo/Photodiode.jpg" alt="Proyek Photodiode">
+          <img src="Photo/Photodiode.jpeg" alt="Proyek Photodiode">
           <video src="video/video2.mp4" controls></video>
         </div>
         <div class="description">
