--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3>Kendaraan Otonom</h3>
       <div class="project-info">
         <div class="media">
-          <img src="Photo/Photodiode.jepg" alt="Proyek Photodiode">
+          <img src="Photo/Photodiode.jpeg" alt="Proyek Photodiode">
           <video src="video/pothodiode.mp4" controls></video>
         </div>
         <div class="description">
@@ -48,7 +48,7 @@
       <h3>Proyek 2</h3>
       <div class="project-info">
         <div class="media">
-          <img src="Photo/Photodiode.jpeg" alt="Proyek Photodiode">
+          <img src="Photo/Photodiode.jpg" alt="Proyek Photodiode">
           <video src="video/video2.mp4" controls></video>
         </div>
         <div class="description">
@@ -183,9 +183,8 @@
   <section id="contact">
     <h2>Kontak</h2>
     <p>Nomor    : 081273940601</p>
-    <p>Linkedin : <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
+    <p>LinkedIn : <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
     <p>Instagram: <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
   </section>
 
   <footer>
