--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
  (IoT) serta penggunaan mikrokontroler seperti Arduino dan Jetson Nano. saya juga
  memiliki pemahaman yang kuat tentang sensor dan aplikasinya. Selain itu, saya tertarik
  minat di bidang IT, dengan spesialisasi manajemen Database dan pengembangan Web.</p>
-  </section>
 
   <section id="contact">
     <h2>Kontak</h2>
     <p>Nomor    : 081273940601</p>
     <p>LinkedIn : <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
     <p>Instagram: <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
+    <p>LinkedIn : <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
   </section>
 
   <footer>
