--- a/index.html
+++ b/index.html
@@ -171,20 +171,17 @@
 
   </section>
 
-  <section id="about">
-    <h2>Tentang Saya</h2>
-    <p>Mahasiswa Teknik Elektro tahun terakhir dengan pemahaman yang kuat tentang arus bolak-balik
- (AC) dan Arus Searah (DC). Saya mahir dalam mengoperasikan PLC dan terampil dalam Internet of Things
- (IoT) serta penggunaan mikrokontroler seperti Arduino dan Jetson Nano. saya juga
- memiliki pemahaman yang kuat tentang sensor dan aplikasinya. Selain itu, saya tertarik
- minat di bidang IT, dengan spesialisasi manajemen Database dan pengembangan Web.</p>
+ <section id="about">
+  <h2>Tentang Saya</h2>
+  <p>Mahasiswa Teknik Elektro tahun terakhir dengan pemahaman yang kuat tentang arus bolak-balik (AC) dan Arus Searah (DC). Saya mahir dalam mengoperasikan PLC dan terampil dalam Internet of Things (IoT) serta penggunaan mikrokontroler seperti Arduino dan Jetson Nano. saya juga memiliki pemahaman yang kuat tentang sensor dan aplikasinya. Selain itu, saya tertarik minat di bidang IT, dengan spesialisasi manajemen Database dan pengembangan Web.</p>
 </section>
+
 <section id="contact">
-    <h2>Kontak</h2>
-    <p>Nomor    : 081273940601</p>
-    <p>LinkedIn : <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
-  </section>
+  <h2>Kontak</h2>
+  <p>Nomor: 081273940601</p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/erdianto-sitorus-3121ba294/" target="_blank">Erdianto Sitorus</a></p>
+  <p>Instagram: <a href="https://www.instagram.com/erdisitorus_/" target="_blank">erdisitorus_</a></p>
+</section>
 
   <footer>
     <p>&copy; 2024 Portofolio Erdianto Sitorus</p>
